--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -92,7 +92,7 @@
                                 android:layout_alignParentTop="true"
                                 android:layout_marginLeft="16dp"
                                 android:text="Sarfraz Ahmed"
-                                android:textColor="@android:color/black"
+                                android:textColor="#57595b"
                                 android:textSize="22sp" />
 
                             <TextView
@@ -104,7 +104,7 @@
                                 android:layout_centerHorizontal="false"
                                 android:layout_margin="0dp"
                                 android:text="Dept. of Information Science"
-                                android:textColor="@android:color/black" />
+                                android:textColor="#57595b" />
 
                             <TextView
                                 android:id="@+id/college2"
@@ -115,7 +115,7 @@
                                 android:layout_margin="0dp"
                                 android:layout_marginBottom="0dp"
                                 android:text="Bangalore Institute of Technology"
-                                android:textColor="@android:color/black" />
+                                android:textColor="#57595b" />
 
                             <TextView
                                 android:id="@+id/phdev2"
@@ -129,8 +129,8 @@
                                 android:layout_marginLeft="0dp"
                                 android:autoLink="phone"
                                 android:text="Phone: +91 7631510420"
-                                android:textColor="@android:color/black"
-                                android:textColorLink="@color/buttoncolordark" />
+                                android:textColor="#57595b"
+                                android:textColorLink="@color/buttoncolorlight" />
 
                             <TextView
                                 android:id="@+id/websitedev2"
@@ -145,7 +145,7 @@
                                 android:layout_marginLeft="0dp"
                                 android:autoLink="web"
                                 android:text="Website: sarfrazahmed.github.io"
-                                android:textColor="@android:color/black"
+                                android:textColor="#57595b"
                                 android:textColorLink="@color/buttoncolorlight" />
 
                         </RelativeLayout>
@@ -221,7 +221,7 @@
                                 android:layout_alignParentTop="true"
                                 android:layout_marginLeft="16dp"
                                 android:text="Syed Misbah Ahmed"
-                                android:textColor="#1b1b1b"
+                                android:textColor="#57595b"
                                 android:textSize="22sp" />
 
                             <TextView
@@ -233,7 +233,7 @@
                                 android:layout_centerHorizontal="false"
                                 android:layout_margin="0dp"
                                 android:text="Dept. of Electronics and Instrumentation"
-                                android:textColor="#1b1b1b" />
+                                android:textColor="#57595b" />
 
                             <TextView
                                 android:id="@+id/college1"
@@ -244,7 +244,7 @@
                                 android:layout_margin="0dp"
                                 android:layout_marginBottom="0dp"
                                 android:text="Bangalore Institute of Technology"
-                                android:textColor="#1b1b1b" />
+                                android:textColor="#57595b" />
 
                             <TextView
                                 android:id="@+id/phdev1"
@@ -258,7 +258,7 @@
                                 android:layout_marginLeft="0dp"
                                 android:autoLink="phone"
                                 android:text="Phone: +91 9066665419"
-                                android:textColor="#1b1b1b"
+                                android:textColor="#57595b"
                                 android:textColorLink="@color/buttoncolorlight" />
 
                             <TextView
@@ -274,7 +274,7 @@
                                 android:layout_marginLeft="0dp"
                                 android:autoLink="web"
                                 android:text="Website: syedmisbah.github.io"
-                                android:textColor="#1b1b1b"
+                                android:textColor="#57595b"
                                 android:textColorLink="@color/buttoncolorlight" />
 
                         </RelativeLayout>
