--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -66,7 +66,7 @@
                 android:scaleY="1"
                 android:text="TIME TABLE"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="#57595b"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
@@ -88,7 +88,7 @@
                 android:scaleY="1"
                 android:text="SYLLABUS"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="#57595b"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
@@ -106,7 +106,7 @@
                 android:scaleY="1"
                 android:text="NOTES"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="#57595b"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
@@ -133,7 +133,7 @@
                 android:scaleY="1"
                 android:text="ATTENDANCE"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="#57595b"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
@@ -151,7 +151,7 @@
                 android:scaleY="1"
                 android:text="MARKS"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="#57595b"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
@@ -169,7 +169,7 @@
                 android:scaleY="1"
                 android:text="EVENTS"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="#57595b"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
@@ -197,7 +197,7 @@
                 android:scaleY="1"
                 android:text="FACULTY"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="#57595b"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
@@ -215,7 +215,7 @@
                 android:scaleY="1"
                 android:text="ASSIGNMENT"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="#57595b"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
@@ -233,7 +233,7 @@
                 android:scaleY="1"
                 android:text="Scanner"
                 android:textAlignment="center"
-                android:textColor="#000000"
+                android:textColor="#57595b"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:typeface="sans" />
