--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#4284f2</color>
     <color name="colorPrimaryDark">#3367d5</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#3367d5</color>
     <color name="buttoncolor">#0277b6</color>
     <color name="buttoncolordark">#3367d5</color>
     <color name="buttoncolorlight">#4284f2</color>
