--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="informationscience.bitise.SupportActivity">
 
     <TextView
@@ -13,6 +14,279 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="Contact any of the students listed below:"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="false"
+        android:layout_below="@+id/textView3"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        android:weightSum="3">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <android.support.v7.widget.CardView
+                app:cardBackgroundColor="#7fc6b2b2"
+                app:cardCornerRadius="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_margin="10dp"
+                android:layout_alignParentLeft="true">
+
+                <RelativeLayout
+                    android:id="@+id/rel1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/devimg1"
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        app:srcCompat="@drawable/bhaskar" />
+
+                    <TextView
+                        android:id="@+id/nameDev1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/devimg1"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_toEndOf="@+id/devimg1"
+                        android:layout_toRightOf="@+id/devimg1"
+                        android:text="Bhaskar Kumar"
+                        android:textColor="@android:color/black"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/DeptDev1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_above="@+id/college1"
+                        android:layout_alignStart="@+id/nameDev1"
+                        android:layout_centerHorizontal="false"
+                        android:text="Dept. of Information Science"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/college1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/devimg1"
+                        android:layout_alignStart="@+id/nameDev1"
+                        android:text="Bangalore Institute of Technology"
+                        android:textColor="@android:color/black"
+                        android:layout_alignLeft="@+id/nameDev1" />
+
+                    <TextView
+                        android:id="@+id/phdev1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/devimg1"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:autoLink="phone"
+                        android:text="Phone: +91 9739743004"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/mailid1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="false"
+                        android:layout_alignParentRight="false"
+                        android:layout_below="@+id/phdev1"
+                        android:layout_marginLeft="10dp"
+                        android:autoLink="email"
+                        android:text="E-Mail: bk.kmr7@gmail.com"
+                        android:textColor="@android:color/black" />
+
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <android.support.v7.widget.CardView
+                app:cardBackgroundColor="#7fc6b2b2"
+                app:cardCornerRadius="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_margin="10dp">
+
+                <RelativeLayout
+                    android:id="@+id/rel2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/devimg2"
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        app:srcCompat="@drawable/manish" />
+
+                    <TextView
+                        android:id="@+id/nameDev2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/devimg2"
+                        android:layout_marginStart="10dp"
+                        android:layout_toEndOf="@+id/devimg2"
+                        android:text="Manish Raju"
+                        android:textColor="@android:color/black"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/DeptDev2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_above="@+id/college2"
+                        android:layout_alignStart="@+id/nameDev2"
+                        android:layout_centerHorizontal="false"
+                        android:text="Dept. of Information Science "
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/college2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/devimg2"
+                        android:layout_alignStart="@+id/nameDev2"
+                        android:text="Bangalore Institute of Technology"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/phdev2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/devimg2"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:autoLink="phone"
+                        android:text="Phone: +91 9916289407"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/mailid2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="false"
+                        android:layout_below="@+id/phdev2"
+                        android:layout_marginLeft="10dp"
+                        android:autoLink="email"
+                        android:text="E-Mail: manishraju1996@gmail.com"
+                        android:textColor="@android:color/black" />
+
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <android.support.v7.widget.CardView
+                app:cardBackgroundColor="#7fc6b2b2"
+                app:cardCornerRadius="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_margin="10dp">
+
+                <RelativeLayout
+                    android:id="@+id/rel3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <ImageView
+                        android:id="@+id/devimg3"
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        app:srcCompat="@drawable/swapnil" />
+
+                    <TextView
+                        android:id="@+id/nameDev3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/devimg3"
+                        android:layout_marginStart="10dp"
+                        android:layout_toEndOf="@+id/devimg3"
+                        android:text="Swapnil"
+                        android:textColor="@android:color/black"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:id="@+id/DeptDev3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_above="@+id/college3"
+                        android:layout_alignStart="@+id/nameDev3"
+                        android:layout_centerHorizontal="false"
+                        android:text="Dept. of Information Science"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/college3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/devimg3"
+                        android:layout_alignStart="@+id/nameDev3"
+                        android:text="Bangalore Institute of Technology"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/phdev3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/devimg3"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:autoLink="phone"
+                        android:text="Phone: +91 9538207327"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/mailid3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="false"
+                        android:layout_below="@+id/phdev3"
+                        android:layout_marginLeft="10dp"
+                        android:autoLink="email"
+                        android:text="E-Mail: swapnil1236@gmail.com"
+                        android:textColor="@android:color/black" />
+
+                </RelativeLayout>
+
+            </android.support.v7.widget.CardView>
+        </RelativeLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
