--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,7 +16,6 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:scaleX="1.2"
         android:scaleY="1.2"
         app:srcCompat="@mipmap/ic_launcher" />
@@ -24,8 +23,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Department of Information Science"
+        android:paddingTop="10dp"
+        android:text="Department of Information Science &amp; Engineering"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
