Semester Selectors and Feedback form selector landscape mode implemented & some minor changes

--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -23,6 +23,7 @@
         android:layout_height="match_parent"
         android:layout_alignParentBottom="false"
         android:layout_below="@+id/textView10"
+        android:layout_marginTop="10dp"
         android:orientation="vertical"
         android:weightSum="2">
 
@@ -68,10 +69,12 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentLeft="false"
                             android:layout_alignParentStart="false"
-                            android:layout_alignParentTop="true"
+                            android:layout_alignParentTop="false"
                             android:layout_gravity="top|fill"
                             android:layout_weight="1"
                             android:adjustViewBounds="true"
+                            android:cropToPadding="false"
+                            android:focusableInTouchMode="false"
                             app:srcCompat="@drawable/dev2" />
                     </LinearLayout>
 
@@ -167,11 +170,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 app:cardBackgroundColor="@color/cardbgval"
-                app:cardCornerRadius="0dp"
-                android:layout_alignParentLeft="true">
+                app:cardCornerRadius="0dp">
 
                 <LinearLayout
                     android:id="@+id/rel2"
@@ -195,13 +198,13 @@
                             android:id="@+id/devimg1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_alignParentLeft="false"
                             android:layout_alignParentStart="false"
                             android:layout_alignParentTop="true"
                             android:layout_gravity="top|fill"
                             android:layout_weight="1"
                             android:adjustViewBounds="true"
-                            app:srcCompat="@drawable/dev1"
-                            android:layout_alignParentLeft="false" />
+                            app:srcCompat="@drawable/dev1" />
                     </LinearLayout>
 
                     <LinearLayout
