--- a/app/src/main/res/layout/activity_support.xml
+++ b/app/src/main/res/layout/activity_support.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/creditbgcolor"
     tools:context="informationscience.bitise.SupportActivity">
 
     <TextView
@@ -33,14 +34,14 @@
             android:layout_weight="1">
 
             <android.support.v7.widget.CardView
-                app:cardBackgroundColor="#7fc6b2b2"
-                app:cardCornerRadius="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
-                android:layout_alignParentLeft="true">
+                app:cardBackgroundColor="@color/cardbgval"
+                app:cardCornerRadius="5dp">
 
                 <RelativeLayout
                     android:id="@+id/rel1"
@@ -84,10 +85,10 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignBottom="@+id/devimg1"
+                        android:layout_alignLeft="@+id/nameDev1"
                         android:layout_alignStart="@+id/nameDev1"
                         android:text="Bangalore Institute of Technology"
-                        android:textColor="@android:color/black"
-                        android:layout_alignLeft="@+id/nameDev1" />
+                        android:textColor="@android:color/black" />
 
                     <TextView
                         android:id="@+id/phdev1"
@@ -123,13 +124,13 @@
             android:layout_weight="1">
 
             <android.support.v7.widget.CardView
-                app:cardBackgroundColor="#7fc6b2b2"
-                app:cardCornerRadius="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                app:cardBackgroundColor="@color/cardbgval"
+                app:cardCornerRadius="5dp">
 
                 <RelativeLayout
                     android:id="@+id/rel2"
@@ -208,13 +209,13 @@
             android:layout_weight="1">
 
             <android.support.v7.widget.CardView
-                app:cardBackgroundColor="#7fc6b2b2"
-                app:cardCornerRadius="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_margin="10dp">
+                android:layout_margin="10dp"
+                app:cardBackgroundColor="@color/cardbgval"
+                app:cardCornerRadius="5dp">
 
                 <RelativeLayout
                     android:id="@+id/rel3"
